[package]
name = "dioxus-async-memtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
reqwest = { version = "^0.11", features = ["json", "gzip", "cookies"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "2dddba9bd62bf12b8791c5b5e48ff663e86be363" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", package = "dioxus-desktop", rev = "2dddba9bd62bf12b8791c5b5e48ff663e86be363" }
